fix: wrap global resets inside Tailwind base layer

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,15 +2,6 @@
 
 @import "./base.css";
 
-/* Global resets */
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  font-weight: normal;
-}
-
 html,
 body {
   height: 100%;
